--- a/flujo.caja.m3c.co.conf
+++ b/flujo.caja.m3c.co.conf
@@ -1,13 +1,13 @@
-upstream websocket_flujos_caja_m3c_co {
+upstream websocket_flujo_caja_m3c_co {
     server localhost:9000;
 }
 
 server {
     listen       80;
-    server_name  flujos.caja.m3c.co;
+    server_name  flujo.caja.m3c.co;
 
     location /socket.io {
-        proxy_pass http://websocket_flujos_caja_m3c_co;
+        proxy_pass http://websocket_flujo_caja_m3c_co;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
